<resources>
    <string name="app_name">Explore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="about">About</string>
    <string name="enter">Enter...</string>
    <string name="city_to_explore">City to explore</string>
    <string name="let_s_explore">Let\'s EXPLORE</string>
    <string name="explore">Explore</string>
    <string name="save_tip">Save tip</string>
    <string name="loading">Loading...</string>
    <string name="favourite_list">Favourite list</string>
    <string name="delete_favourite_list">Delete favourite list</string>
    <string name="your_list_is_empty">Your list is empty...</string>
    <string name="welcome_to_my_app">Welcome to my app!</string>
    <string name="about_about">About</string>
    <string name="this_application_was_created_on_android_version_9_api_28_the_main_goal_of_this_application_is_to_search_for_travel_tips_according_to_the_selected_city_chatgpt_api_with_version_3_5_turbo_helps_to_find_travel_tips">This application was created on Android version 9 - API 28. The main goal of this application is to search for travel tips according to the selected city. ChatGPT API with version 3.5-turbo helps to find travel tips.</string>
    <string name="you_can_save_tips_to_your_favorites_list_and_the_application_also_allows_you_to_quickly_delete_all_saved_tips_with_one_click">You can save tips to your favorites list, and the application also allows you to quickly delete all saved tips with one click.</string>
    <string name="next_tip">Next tip</string>
    <string name="let_s_eplore">Let\'s EPLORE</string>
</resources>