<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Favourite">

    <LinearLayout
        android:id="@+id/linear_top"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/favourite_list"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:letterSpacing="0.1"
            android:textSize="32sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/emptyPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/your_list_is_empty"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="8dp"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/deleteAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/ic_delete_24"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_corners"
        android:text="@string/delete_favourite_list"
        android:visibility="gone"
        />
</LinearLayout>